# Proc

./: CMakeLists.txt  README.md  main.c
Include/: Analyzer.h  CpuStat.h  Logger.h  Printer.h  ProcInfo.h  ProcStat.h  Queue.h  Reader.h  TermDefines.h  terminalPrint.h
Source/: Logger.c  ProcStat.c  Queue.c  Reader.c  terminalPrint.c
